[gd_scene load_steps=8 format=3 uid="uid://blpd1tfg3r2pt"]

[ext_resource type="Script" path="res://Scripts/PressurePlate.gd" id="1_2qpq2"]
[ext_resource type="Texture2D" uid="uid://c0kabm4uidj5p" path="res://Art/PressurePlateDown.png" id="2_wfol1"]
[ext_resource type="Texture2D" uid="uid://djikgs0p3hrtl" path="res://Art/PressurePlateUp.png" id="3_mdxms"]
[ext_resource type="AudioStream" uid="uid://bbp3qyhu70jd6" path="res://audio/Light On.mp3" id="4_3f5sj"]
[ext_resource type="AudioStream" uid="uid://d3kfiyp72cam8" path="res://audio/Light Off.mp3" id="5_x7wf1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6m66"]
size = Vector2(16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_st5m7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wfol1")
}],
"loop": true,
"name": &"Down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mdxms")
}],
"loop": true,
"name": &"Up",
"speed": 5.0
}]

[node name="PressurePlate" type="Area2D"]
collision_layer = 0
collision_mask = 6
script = ExtResource("1_2qpq2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b6m66")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_st5m7")
animation = &"Up"

[node name="ButtonDown" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3f5sj")
volume_db = -6.0
pitch_scale = 0.5

[node name="ButtonUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_x7wf1")
volume_db = -6.0
pitch_scale = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
